@page RN10 Release notes for SCIP 10

@section RN1010 SCIP 10.1.0
***************************

Features
--------

Performance improvements
------------------------

Fixed bugs
----------

Interface changes
-----------------

### New API functions

- added SCIPcalcBestCut() to try multiple cut generation methods (FlowCover, KnapsackCover, CMIR) on an aggregation row and return the best cut by efficacy
- added SCIPinitCutGenParams(), SCIPcreateCutGenResult(), and SCIPfreeCutGenResult() as helper functions for SCIPcalcBestCut()
- added SCIPnlpiOracleEvalObjectiveInterval() and SCIPnlpiOracleEvalConstraintInterval()

### New parameters

- `presolving/milp/enableGF2`: whether to enable GF2 presolver in PaPILO

### Changed parameters

### Data Structures

- added struct \ref SCIP_CUTGENPARAMS for cut generation parameters
- added struct \ref SCIP_CUTGENRESULT for cut generation result

Build system
------------

- added build flag CHECKNAME=auto to control name checks in plugin function calls

### Cmake

### Makefiles

Testing
-------

Miscellaneous
-------------

@section RN1002 SCIP 10.0.2
***************************

Fixed bugs
----------

- propagate focus lower bound to child nodes to avoid outdated global lower bound

@section RN1001 SCIP 10.0.1
***************************

Fixed bugs
----------

- fixed that parameters passed on as variadic arguments to SCIPsolveNLP() and SCIPsolveNlpi() were ignored when compiling with MS compilers without -Zc:preprocessor
- make more CONOPT output available when verbosity level is set to 2
- turn off detection of definitional constraints in CONOPT for now, to work around a related issue in CONOPT 4.39.0
- fixed call of SCIPcreateConsBasicSOCNonlinear() with coefs being NULL, and fixed check for offsets being finite
- avoid crash when initial IIS solve fails while reporting errors explicitly
- fixed that variable removal in IIS cleanup tried to delete variables that were marked as not deletable